[tool.pdm.build]
includes = []

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
exclude = ["alembic/versions"]

[tool.black]
line-length = 100
exclude = "alembic/versions"

[tool.flake8]
max-line-length = 100
exclude = "alembic/versions"

[tool.isort]
line_length = 100

[project]
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiogram<3.0.0,>=2.25.1",
    "aiohttp<4.0.0,>=3.8.4",
    "graphviz<1.0.0,>=0.20.1",
    "pydantic-yaml<2.0.0,>=1.1.1",
    "sqlmodel<1.0.0,>=0.0.8",
    "pydantic<2.0.0,>=1.10.12",
    "cashews<7.0.0,>=6.2.0",
    "aiosqlite<1.0.0,>=0.19.0",
    "alembic<2.0.0,>=1.11.2",
    "psutil<6.0.0,>=5.9.5",
    "humanize<5.0.0,>=4.7.0",
]
name = "yakusoku"
version = "0.1.0"
description = ""

[project.group.dev.dependencies]
pyright = "^1.1.316"
pyproject-flake8 = "^6.0.0.post1"
black = "^23.7.0"
isort = "^5.12.0"
