[project]
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiogram<3.0.0,>=2.25.1",
    "aiohttp<4.0.0,>=3.8.4",
    "graphviz<1.0.0,>=0.20.1",
    "pydantic-yaml<2.0.0,>=1.1.1",
    "sqlmodel<1.0.0,>=0.0.8",
    "pydantic<2.0.0,>=1.10.12",
    "cashews<7.0.0,>=6.2.0",
    "aiosqlite<1.0.0,>=0.19.0",
    "alembic<2.0.0,>=1.11.2",
    "psutil<6.0.0,>=5.9.5",
    "humanize<5.0.0,>=4.7.0",
]
name = "yakusoku"
version = "0.1.0"
description = ""

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pyright>=1.1.330.post0",
    "pyproject-flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
exclude = ["alembic/versions", ".venv"]

[tool.black]
line-length = 100
exclude = "alembic/versions|.venv"

[tool.flake8]
max-line-length = 100
exclude = "alembic/versions,.venv"

[tool.isort]
line_length = 100
skip = ["alembic/versions", ".venv"]
profile = "black"

[tool.setuptools]
packages = ["yakusoku"]
