[project]
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiogram~=3.8.0",
    "aiohttp~=3.9.0",
    "graphviz~=0.20.0",
    "pydantic-yaml~=1.0",
    "sqlmodel>=0.0.18",
    "pydantic~=2.0",
    "cashews~=6.0",
    "aiosqlite~=0.20.0",
    "alembic~=1.13.0",
    "psutil>=5.9.8",
    "humanize>=4.9.0",
    "matplotlib~=3.8.0",
    "aiofile>=3.8.8",
    "Pillow~=10.0",
    "python-magic~=0.4.0",
    "zstandard~=0.22.0",
    "aioshutil~=1.0",
    "asyncwhois~=1.1.0",
]
name = "yakusoku"
version = "0.1.0"
description = ""

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pyright",
    "pyproject-flake8",
    "black",
    "isort",
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
exclude = ["alembic/versions", ".venv"]

[tool.black]
line-length = 100
exclude = "alembic/versions|.venv"

[tool.flake8]
max-line-length = 100
exclude = "alembic/versions,.venv"

[tool.isort]
line_length = 100
skip = ["alembic/versions", ".venv"]
profile = "black"

[tool.setuptools]
packages = ["yakusoku"]
